<resources>
    <string name="app_name">Transvision</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="place">Place</string>
    <string name="grade">Grade</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="addEmpActivity">Add Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_on_the_map_to_select_origin_amp_destinatiom"><![CDATA[Click on the MAP to Select Origin & Destinatiom]]></string>
</resources>
